added comments to html page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <!-- header section -->
     <div class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
@@ -24,7 +25,10 @@
             </ul>
         </div>
     </div>
+    <!-- main image field -->
     <div class="hero"></div>
+
+    <!-- targe content sections -->
     <div class="content">
         <div id= "search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="SEO-notepad" class="float-left" />
@@ -48,6 +52,7 @@
             </p>
         </div>
     </div>
+    <!-- right side bar -->
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -71,6 +76,7 @@
             </p>
         </div>
     </div>
+    <!-- footer div -->
     <div class="footer">
         <h4>Made with ❤️️ by Horiseon</h4>
         <p>
